pending files added

--- a/style.css
+++ b/style.css
@@ -155,14 +155,11 @@ intro-container {
 
 }
 
-.social-profile-image-section ing {
-    height: 10rem;
-
-    border-radius: 28%;
-
-    width: 10rem;
-
-    border: 1px solid skyblue;
+.social-profile-image-section img {
+    height: 18rem;
+    border-radius: 16px;
+    box-shadow: 3px 3px 4px rgb(27 40 49 / 25%);
+    border: 2px solid #5dbde4;
 
 }
 
@@ -298,6 +295,10 @@ intro-container {
     margin: auto;
     text-align: center;
     padding-bottom: 2em;
+   
+}
+.resume-container img{
+    width: 20rem;
 }
 
 .resume-container p {
@@ -388,5 +389,12 @@ I .tagcloud {
         display: none;
 
     }
+
+}
+@media screen and (max-width: 600px) {
+
+   .first-name, .second-name{
+    display: block;
+   }
 
 }
