--- a/style.css
+++ b/style.css
@@ -171,6 +171,18 @@ intro-container {
     justify-content: center;
     
 }
+.social-profile-icons-container-enhanced {
+    margin: 1rem;
+
+    display: flex;
+
+    justify-content: center;
+    
+}
+.social-profile-icons-container-enhanced .fa {
+    font-size: 2.5rem;
+    margin: 0 1rem;
+}
 
 .social-profile-icons-container .fa {
     font-size: 2.5rem;
@@ -254,7 +266,12 @@ intro-container {
     position: relative;
     margin: 3rem 6vw 1rem 6vw;
     min-height: 18rem;
+    z-index: 10;
 
+}
+.footer-content{
+    position: relative;
+    z-index: 10;
 }
 
 .footTitle {
@@ -361,7 +378,7 @@ intro-container {
 }
 
 hr {
-
+     margin:auto;
     width: 75%;
 
     box-shadow: 2px 0px 7px skyblue;
@@ -375,19 +392,151 @@ I .tagcloud {
 .tagcloud--item{
     font-size:1rem;
 }
-.circle {
-    width: 40px;
-    height: 40px;
-    background: linear-gradient(to top left, #0062bE, #00A2FE);
-    border-radius: 50%;
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+
+
+.context {
+    width: 100%;
     position: absolute;
-    top: 50%;
+    top:50vh;
+    
+}
+
+.context h1{
+    text-align: center;
+    color: #fff;
+    font-size: 50px;
+}
+
+
+.area{
+    background: #ffffff;  
+    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+    width: 100%;
+    height:30vh;
+    
+   
+}
+
+.circles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.circles li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: skyblue;
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+    
+}
+
+.circles li:nth-child(1){
+    left: 25%;
+    width: 1vw;
+    height: 1vw;
+    animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+    left: 10%;
+    width: 2vw;
+    height: 2vw;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+    left: 70%;
+    width: 3vw;
+    height: 3vw;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+    left: 40%;
+    width: 4vw;
+    height: 4vw;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+    left: 65%;
+    width: 2vw;
+    height: 2vw;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+    left: 75%;
+    width: 5vw;
+    height: 5vw;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+    left: 35%;
+    width: 1vw;
+    height: 1vw;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
     left: 50%;
-    margin: -20px 0 0 -20px;
-    pointer-events: none;
-    mix-blend-mode: multiply;
-    z-index: 10;
-  }
+    width: 3vw;
+    height: 3vw;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+    left: 20%;
+    width: 2vw;
+    height: 2vw;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+    left: 85%;
+    width: 7vw;
+    height: 7vw;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
+}
 
 @media screen and (max-width: 1100px) {
 
